--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -33,6 +33,30 @@
     }
   }
 
+  &.outlined-non-responsive {
+    display: flex;
+    gap: 10px;
+    background-color: var(--quaternary-color);
+    color: var(--white);
+    font-size: var(--20px);
+    border: 1px solid var(--secondary-color);
+    border-radius: 55px;
+    padding: 15px 50px;
+    font-weight: 700;
+
+    &:hover {
+      background-color: var(--tertiary-color);
+    }
+
+    @media screen and (max-width: 768px) {
+      &.outlined-non-responsive {
+        padding: 15px 25px;
+        font-size: var(--20px);
+      }
+
+    }
+  }
+
   &.orange-outlined {
     display: flex;
     gap: 10px;
@@ -122,6 +146,11 @@
     &:hover {
       background: var(--secondary-color-light);
     }
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+        padding: 15px;
+    }
   }
 
   &.orange-non-centered-small {
@@ -183,9 +212,17 @@
     text-transform: uppercase;
     width: fit-content;
     z-index: 999;
+    -webkit-box-shadow: 0px 0px 38px -6px rgba(255,0,0,1);
+    -moz-box-shadow: 0px 0px 38px -6px rgba(255,0,0,1);
+    box-shadow: 0px 0px 38px -6px rgba(255,0,0,1);
 
     &:hover {
       opacity: 0.8;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      padding: 15px;
     }
   }
 }
