--- a/src/components/countdown-timer/CountdownTimer.module.scss
+++ b/src/components/countdown-timer/CountdownTimer.module.scss
@@ -29,6 +29,10 @@
 
   &:last-child{
     width: 86px;
+
+    @media screen and (max-width: 768px) {
+      width: fit-content;
+    }
   }
 
   &:hover{
