--- a/src/sections/ended-raffles/EndedRaffles.module.scss
+++ b/src/sections/ended-raffles/EndedRaffles.module.scss
@@ -10,4 +10,8 @@
   margin: 0 auto 40px auto;
   gap: 30px;
   grid-template-columns: repeat(4, 1fr);
+
+  @media screen and (max-width: 1028px) {
+    display: none;
+  }
 }
