--- a/src/sections/raffles-section/RafflesSection.module.scss
+++ b/src/sections/raffles-section/RafflesSection.module.scss
@@ -6,6 +6,9 @@
   background: url("../../../public/raffles-main-bg.png") no-repeat center;
   position: relative;
 
+  @media screen and (max-width: 768px) {
+    height: 413px;
+  }
 }
 
 .sectionHeader {
@@ -19,6 +22,11 @@
   position: absolute;
   bottom: 0;
   right: 0;
+
+  @media screen and (max-width: 768px) {
+    width: 150px;
+    height: auto;
+  }
 }
 
 .raffleHeading{
@@ -34,12 +42,21 @@
     background: linear-gradient(90deg, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--50px);
+    }
   }
 
   p{
     font-size: var(--24px);
     font-weight: bold;
     color: var(--white);
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--20px);
+      padding: 0 10px;
+    }
   }
 }
 
