--- a/src/sections/vip-rewards/VipRewardsSection.module.scss
+++ b/src/sections/vip-rewards/VipRewardsSection.module.scss
@@ -6,8 +6,12 @@
   background-size: cover;
   justify-content: space-between;
   display: flex;
-  padding: 0 0 50px 0;
+  padding: 200px 0 50px 0;
   flex-direction: column;
+
+  @media screen and (max-width: 1028px) {
+    padding: 50px 10px;
+  }
 }
 
 .sectionHeader {
@@ -17,12 +21,20 @@
   padding: 30px;
 }
 
+.progressBar {
+  width: 100%;
+}
+
 .ticketInfo:last-child {
   font-size: var(--36px);
   color: var(--secondary-color);
 
   p {
     color: var(--secondary-color);
+  }
+
+  @media screen and (max-width: 1028px) {
+    font-size: var(--24px);
   }
 }
 
@@ -35,11 +47,14 @@
   text-align: center;
 
   h1 {
-    font-size: var(--64px);
+    font-size: var(--50px);
     background: linear-gradient(90deg, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
     font-weight: 900;
     -webkit-text-fill-color: transparent;
+    @media screen and (max-width: 1028px) {
+      font-size: var(--36px);
+    }
   }
 
   p {
@@ -71,6 +86,16 @@
     color: var(--grey-light);
     max-width: 498px;
   }
+
+  @media screen and (max-width: 1028px) {
+    flex-direction: column;
+    gap: 20px;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    justify-items: flex-start;
+    padding: 20px;
+  }
 }
 
 .maxTickets {
@@ -91,6 +116,33 @@
   justify-items: center;
   align-items: center;
   align-content: center;
+
+  @media screen and (max-width: 1028px) {
+    display: none;
+  }
+}
+
+.ticketsProgressMobileContent {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 20px;
+}
+
+.ticketsProgressMobile {
+  display: none;
+
+  @media screen and (max-width: 1028px) {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-around;
+    padding: 30px;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+  }
 }
 
 .progress {
@@ -108,16 +160,101 @@
 .ticketInfo:first-child {
   font-size: var(--36px);
   color: var(--beige);
+  @media screen and (max-width: 1028px) {
+    font-size: var(--24px);
+  }
 }
 
 .wagers {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 100%;
   padding: 20px;
+
+}
+
+.wagerContent {
+  width: 100%;
   max-width: 1368px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.wagerTitle {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 400px;
+  padding: 0 380px 0 134px;
+
+  h3 {
+    font-size: var(--24px);
+    font-weight: bold;
+    background: linear-gradient(to right, var(--secondary-color), var(--gold));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  p {
+    font-size: var(--16px);
+    font-weight: bold;
+    color: var(--white);
+  }
+
+
+  @media screen and (max-width: 1188px) {
+    display: none;
+
+  }
+}
+
+.wagerItemMobile {
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 20px 30px;
+  justify-items: center;
+  border-radius: 25px;
+  background: linear-gradient(to bottom, var(--secondary-color-dark-2), var(--secondary-color-dark-3));
+  border: 1px solid var(--secondary-color);
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.wagerInfo {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+
+  h3{
+    font-size: var(--24px);
+    font-weight: 800;
+    background: linear-gradient(to right, var(--secondary-color), var(--gold));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  span{
+    display: flex;
+    gap: 5px;
+    align-content: center;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+  }
 }
 
 .wagerItem {
@@ -130,7 +267,7 @@
   border: 1px solid var(--secondary-color-dark);
   border-radius: 15px;
 
-  span{
+  span {
     display: flex;
     gap: 30px;
     align-content: center;
@@ -143,5 +280,17 @@
     font-size: var(--16px);
     font-weight: bold;
     color: var(--white);
+  }
+
+  h3 {
+    font-size: var(--24px);
+    font-weight: bold;
+    background: linear-gradient(to right, var(--secondary-color), var(--gold));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  @media screen and (max-width: 768px) {
+    display: none;
   }
 }
