--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -12,6 +12,7 @@
   top: 0;
   display: none;
   z-index: 1000;
+  overflow: auto;
 }
 
 .header.fixed {
@@ -58,11 +59,11 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   width: 100%;
   background: #060101;
   transition: height 0.5s ease-in-out;
-  height: 0; /* Default to hidden */
+  height: 0;
   z-index: 9999;
 }
 
