--- a/src/sections/all-bonuses/AllBonusesSection.module.scss
+++ b/src/sections/all-bonuses/AllBonusesSection.module.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   width: 100%;
   gap: 70px;
+  padding: 70px 0 0 0;
 }
 
 .sectionHeader {
@@ -22,6 +23,10 @@
   text-align: center;
   gap: 20px;
 
+  @media screen and (max-width: 768px) {
+    padding: 20px;
+  }
+
 
   h3 {
     font-size: var(--64px);
@@ -29,6 +34,10 @@
     background: linear-gradient(to right, var(--gold), var(--secondary-color));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--32px);
+    }
   }
 
   h2 {
@@ -36,6 +45,10 @@
     background: linear-gradient(to right, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--50px);
+    }
   }
 
   p {
@@ -85,12 +98,21 @@
     span {
       color: var(--gold);
     }
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 }
 
 .promoSection {
   display: flex;
   gap: 10px;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .promoCode {
@@ -105,6 +127,11 @@
   justify-items: center;
   align-content: center;
   align-items: center;
+
+  @media screen and (max-width: 768px) {
+    gap: 20px;
+    padding: 15px 20px;
+  }
 
   span {
     font-size: var(--24px);
@@ -124,6 +151,42 @@
   }
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+
+  button {
+    background-color: var(--secondary-color-dark);
+    color: var(--white);
+    border: none;
+    border-radius: 50%;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: var(--16px);
+    transition: background-color 0.3s ease;
+
+    &.active {
+      background-color: var(--gold);
+    }
+
+    &:hover {
+      background-color: var(--gold);
+    }
+  }
+
+  .arrowButton {
+    padding: 10px;
+  }
+
+  span {
+    font-size: var(--16px);
+    color: var(--white);
+  }
+}
+
 .amazingRewards {
   display: flex;
   flex-direction: column;
@@ -136,4 +199,8 @@
   gap: 20px;
   margin: 0 auto;
   max-width: 1368px;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
