--- a/src/sections/banner/Banner.module.scss
+++ b/src/sections/banner/Banner.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding: 0 0 70px;
+  padding: 70px 20px;
 }
 
 .banner {
@@ -39,12 +39,26 @@
     text-transform: uppercase;
     color: var(--gold);
     text-align: center;
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--36px);
+    }
   }
 
   p {
     font-weight: bold;
     font-size: var(--20px);
     color: var(--white);
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--14px);
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 20px 10px;
+    text-align: center;
+    align-content: center;
   }
 }
 
@@ -57,4 +71,9 @@
   display: flex;
   gap: 20px;
   justify-content: center;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
