--- a/src/sections/item-raffle/ItemRaffle.module.scss
+++ b/src/sections/item-raffle/ItemRaffle.module.scss
@@ -1,12 +1,24 @@
 .itemRaffle {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .itemRaffleInner {
   display: flex;
   gap: 20px;
   margin: 0 auto;
+  padding: 150px 20px 50px 20px;
   max-width: 1368px;
+
+  @media screen and (max-width: 1028px) {
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    padding: 20px;
+    margin: 0;
+  }
 }
 
 .sectionHeader {
@@ -28,6 +40,16 @@
   align-items: center;
   padding: 70px;
   width: 50%;
+
+  @media screen and (max-width: 1028px) {
+    width: 100%;
+    .knifeImage{
+        width: 208px;
+        height: auto;
+    }
+
+  }
+
 }
 
 .itemRaffleDescription {
@@ -36,6 +58,11 @@
   gap: 15px;
   flex-direction: column;
 
+  @media screen and (max-width: 1028px) {
+    width: 100%;
+    gap: 30px;
+  }
+
   h2 {
     font-size: var(--64px);
     font-weight: bold;
@@ -43,11 +70,21 @@
     background: linear-gradient(90deg, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--36px);
+    }
+
   }
 
   p {
     font-size: var(--20px);
     color: var(--grey-light);
+
+    @media screen and (max-width: 1028px) {
+      width: 100%;
+    }
+
   }
 }
 
@@ -59,6 +96,10 @@
   gap: 15px;
   border: 1px solid var(--quinary-color);
   border-radius: 25px;
+
+  @media screen and (max-width: 1028px) {
+    padding: 15px;
+  }
 }
 
 .priceField {
@@ -93,12 +134,48 @@
   margin: 20px 0;
 }
 
+.progressBar {
+  display: flex;
+  max-width: 725px;
+  width: 100%;
+}
+
+.ticketsProgressMobile {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  align-content: center;
+  align-items: center;
+  padding: 10px;
+  justify-items: center;
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+  }
+}
+
+.tickets{
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    justify-content: space-between;
+    padding: 30px;
+
+    @media screen and (max-width: 768px) {
+    }
+}
+
 .ticketsProgress {
   display: flex;
   gap: 10px;
   width: 100%;
   justify-content: space-around;
   padding: 30px;
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .progress {
@@ -146,11 +223,12 @@
       opacity: 0.8;
     }
 
-    &:first-child{
+    &:first-child {
       border-radius: 55px 0 0 55px;
       background: var(--quinary-color);
     }
-    &:last-child{
+
+    &:last-child {
       border-radius: 0 55px 55px 0;
       background: var(--quinary-color);
     }
@@ -189,6 +267,11 @@
   border-radius: 25px;
   padding: 20px;
   justify-content: space-between;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 
 .drawingInfo {
@@ -198,12 +281,20 @@
   align-items: center;
   justify-items: center;
 
-  p{
-    font-size: var(--20px);
-    color: var(--grey-light);
+  @media screen and (max-width: 768px) {
+    padding: 10px;
   }
 
-  span{
+  p {
+    font-size: var(--20px);
+    color: var(--grey-light);
+
+    @media screen and (max-width: 768px) {
+      font-size: var(--14px);
+    }
+  }
+
+  span {
     font-size: var(--24px);
     color: var(--secondary-color);
     font-weight: bold;
