--- a/src/sections/clashcasino-leaderboard/ClashCasino.module.scss
+++ b/src/sections/clashcasino-leaderboard/ClashCasino.module.scss
@@ -1,7 +1,7 @@
 .clashcasino {
   background: url("../../../public/clashcasino-bg.png") no-repeat center;
   background-size: cover;
-  padding: 0 0 120px 0;
+  padding: 120px 0 120px 0;
   gap: 40px;
   display: flex;
   flex-direction: column;
