--- a/src/sections/raffles-section/RafflesSection.module.scss
+++ b/src/sections/raffles-section/RafflesSection.module.scss
@@ -5,9 +5,11 @@
   flex-direction: column;
   background: url("../../../public/raffles-main-bg.png") no-repeat center;
   position: relative;
+  padding: 90px 0 120px 0;
 
   @media screen and (max-width: 768px) {
     height: 413px;
+    padding: 10px 0;
   }
 }
 
@@ -37,7 +39,7 @@
   gap: 20px;
 
   h1 {
-    font-size: var(--64px);
+    font-size: 9rem;
     font-weight: 900;
     background: linear-gradient(90deg, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
