--- a/src/components/login-button/LoginButton.module.scss
+++ b/src/components/login-button/LoginButton.module.scss
@@ -4,6 +4,10 @@
   right: 30px;
   z-index: 9999;
 
+  a{
+    text-decoration: none;
+  }
+
   @media screen and (max-width: 1180px) {
     display: none;
   }
