--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: column;
-  padding: 50px 0;
+  padding: 50px 50px;
   background: url("../../../public/footer.svg") no-repeat center;
   background-size: cover;
 }
