--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -151,3 +151,10 @@
   gap: 30px;
 }
 
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  margin: 300px auto;
+}
