--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  padding: 30px 60px;
+  padding: 150px 60px;
   background: url("../../../public/account-bg.png") no-repeat center;
   background-size: cover;
   gap: 70px;
@@ -101,15 +101,15 @@
   gap: 20px;
 }
 
-.icon{
-    font-size: var(--24px);
-    color: var(--secondary-color);
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+.icon {
+  font-size: var(--24px);
+  color: var(--secondary-color);
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 
-    &:hover {
-        opacity: 0.7;
-    }
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .input {
@@ -151,10 +151,87 @@
   gap: 30px;
 }
 
-.loading{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   margin: 300px auto;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup {
+  background: var(--secondary-color-dark-2);
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.headerButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-items: center;
+  gap: 20px;
+  align-content: center;
+}
+
+.popupContent {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: start;
+  align-content: flex-start;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  align-items: flex-start;
+
+  p {
+    font-size: var(--20px);
+    color: var(--grey);
+  }
+}
+
+.popupInput {
+  display: flex;
+  padding: 10px 20px;
+  border-radius: 12px;
+  justify-content: space-between;
+  width: 100%;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  background: var(--senary-color);
+
+  button {
+    font-size: var(--24px);
+    border-radius: 5px;
+    background: var(--secondary-color-dark-2);
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
+    color: var(--white);
+    transition: 0.2s all ease-in-out;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
 }
