--- a/src/components/login-button/LoginButton.module.scss
+++ b/src/components/login-button/LoginButton.module.scss
@@ -4,12 +4,52 @@
   right: 30px;
   z-index: 9999;
 
-  a{
+  a {
     text-decoration: none;
   }
 
   @media screen and (max-width: 1180px) {
     display: none;
   }
+}
+
+.accountItem {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  justify-items: center;
+  text-decoration: none;
+  z-index: 9999;
+  align-content: center;
+  cursor: pointer;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  border-radius: 55px;
+  padding: 10px 30px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    background: var(--senary-color);
+  }
+}
+
+.accountItemCredentials {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.accountWallet {
+  display: flex;
+  align-content: center;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  align-items: center;
+  gap: 10px;
+  color: var(--gold);
+  font-weight: bold;
 }
 
