--- a/src/components/login-button/LoginButton.module.scss
+++ b/src/components/login-button/LoginButton.module.scss
@@ -31,6 +31,10 @@
   padding: 10px 30px;
   transition: all 0.3s ease-in-out;
 
+  @media screen and (max-width: 1180px) {
+    display: none;
+  }
+
   &:hover {
     background: var(--senary-color);
   }
