some changes, improvements

--- a/src/components/full-width-slider/FullWidthSlider.module.scss
+++ b/src/components/full-width-slider/FullWidthSlider.module.scss
@@ -40,6 +40,49 @@
   justify-content: flex-start;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.containerLoader {
+  gap: 20px;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+
+.loader {
+  border: 12px solid var(--senary-color);
+  border-radius: 50%;
+  border-top: 12px solid var(--secondary-color);
+  width: 65px;
+  height: 65px;
+  animation: spin 2s linear infinite;
+  margin-bottom: 20px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .sliderTrack {
   display: flex;
   transition: transform 0.5s ease-in-out;
@@ -52,20 +95,20 @@
   align-items: center;
   justify-items: center;
   align-content: center;
-  margin: 0 auto;
+  margin: 0 auto ;
   width: 130px;
 }
 
 .sliderImage {
   object-fit: contain;
   cursor: pointer;
-  margin: 0 50px 0 0;
+  height: auto;
   border: 1px solid transparent;
   transition: transform 0.2s ease-in-out;
 
 
-    &:hover {
-        transform: scale(1.1);
-    }
+  &:hover {
+    transform: scale(1.1);
+  }
 
 }
