bug fixes, improvements

--- a/src/components/full-width-slider/FullWidthSlider.module.scss
+++ b/src/components/full-width-slider/FullWidthSlider.module.scss
@@ -35,9 +35,25 @@
 
 .sliderContent {
   width: 100%;
-  overflow: hidden;
   display: flex;
-  justify-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  @media screen and (max-width: 478px) {
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+}
+
+.imageContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .overlay {
