--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root{
+:root {
     --primary-color-body: #060101;
     --secondary-color: #e4571b;
     --secondary-color-light: #d16f45;
@@ -43,7 +43,15 @@
     font-family: "Anek Latin", sans-serif;
 }
 
-body{
+.loading-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+body {
     background-color: var(--primary-color-body);
     color: var(--white);
 }
