--- a/src/components/leaderboard-history-item/LeaderboardHistoryItem.module.scss
+++ b/src/components/leaderboard-history-item/LeaderboardHistoryItem.module.scss
@@ -86,6 +86,14 @@
   }
 }
 
+.avatar{
+  display: flex;
+  object-fit: cover;
+  border-radius: 155px;
+  height: 50px;
+  width: 50px;
+}
+
 .nickname {
   display: flex;
   gap: 20px;
