--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -149,6 +149,7 @@
     font-size: var(--16px);
     border: none;
     outline: none;
+    width: 100%;
 
     &::placeholder {
       color: var(--grey);
