--- a/src/sections/leaders/Leaders.module.scss
+++ b/src/sections/leaders/Leaders.module.scss
@@ -34,7 +34,7 @@
 
 .tableLore {
   display: flex;
-  padding: 20px;
+  padding: 20px 50px 20px 20px;
   justify-content: space-between;
 
   span {
