--- a/src/sections/leaders/Leaders.module.scss
+++ b/src/sections/leaders/Leaders.module.scss
@@ -49,6 +49,7 @@
     color: transparent;
     font-weight: bold;
     font-size: var(--24px);
+    text-shadow: 0 0 1px var(--gold), 0 0 5px var(--secondary-color);
   }
 }
 
