--- a/src/components/leader-item/LeaderItem.module.scss
+++ b/src/components/leader-item/LeaderItem.module.scss
@@ -2,23 +2,37 @@
   display: flex;
   padding: 15px 30px;
   border: 1px solid var(--secondary-color-dark);
-  background: linear-gradient(to bottom, var(--bordo-dark), var(--secondary-color-dark-2));
-  border-radius: 25px;
+  background: linear-gradient(to bottom, var(--secondary-color-dark-2), var(--quaternary-color));
+  border-radius: 15px;
   justify-content: space-between;
   width: 100%;
   align-content: center;
   justify-items: center;
   align-items: center;
+  transition: 0.2s all ease-in-out;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 4px 0px rgba(240,155,0,1);
+  -moz-box-shadow: 0px 0px 4px 0px rgba(240,155,0,1);
+  box-shadow: 0px 0px 4px 0px rgba(240,155,0,1);
+
+    &:hover {
+        transform: scale(1.02);
+    }
 
   h3 {
     background: linear-gradient(to right, var(--secondary-color), var(--gold));
     -webkit-background-clip: text;
     color: transparent;
     font-weight: bold;
-    width: 80px;
+    display: flex;
     align-content: center;
+    text-align: center;
+    justify-content: center;
     justify-items: center;
     align-items: center;
+    gap: 3px;
+    width: 90px;
+    text-shadow: 0 0 1px var(--gold), 0 0 5px var(--secondary-color);
     font-size: var(--24px);
   }
 }
@@ -27,12 +41,18 @@
   display: flex;
   gap: 30px;
   width: 165px;
+
+  p:first-child{
+    font-weight: bold;
+    color: #998877;
+  }
 }
 
 .leaderItemXP {
   color: var(--white);
   font-size: var(--20px);
   display: flex;
+  width: 160px;
   gap: 3px;
   font-weight: bold;
 
