--- a/src/components/player-frame/PlayerFrame.module.scss
+++ b/src/components/player-frame/PlayerFrame.module.scss
@@ -18,6 +18,14 @@
     color: var(--gold);
     font-size: var(--36px);
     margin: 0 0 45px 0;
+    display: flex;
+    gap: 5px;
+    align-content: center;
+    padding: 0 5px 0 0;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+
   }
 }
 
@@ -71,6 +79,13 @@
     color: var(--white);
     font-size: var(--32px);
     margin: 0 0 30px 0;
+    display: flex;
+    gap: 5px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5px 0 0;
+    justify-items: center;
   }
 }
 
@@ -94,6 +109,13 @@
     color: var(--white);
     font-size: var(--32px);
     margin: 0 0 30px 0;
+    display: flex;
+    gap: 5px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    padding: 0 5px 0 0;
   }
 }
 
