--- a/src/sections/clashcasino-leaderboard/ClashCasino.module.scss
+++ b/src/sections/clashcasino-leaderboard/ClashCasino.module.scss
@@ -15,6 +15,38 @@
   padding: 30px;
 }
 
+.article{
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  gap: 10px;
+  text-align: start;
+
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+
+    ul{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      li{
+      }
+    }
+  }
+}
+
+.pTitle{
+  font-size: 18px;
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+  }
+}
+
+.redText {
+  color: red;
+}
+
 .clashcasinoContent {
   display: flex;
   flex-direction: column;
