--- a/src/components/countdown-timer/CountdownTimer.module.scss
+++ b/src/components/countdown-timer/CountdownTimer.module.scss
@@ -22,12 +22,12 @@
   cursor: pointer;
   transition: 0.3s ease-in-out;
 
-  &:first-child{
-   background: var(--secondary-color-dark-2);
+  &:first-child {
+    background: var(--secondary-color-dark-2);
     border: 1px solid var(--secondary-color);
   }
 
-  &:last-child{
+  &:last-child {
     width: 86px;
 
     @media screen and (max-width: 768px) {
@@ -35,12 +35,12 @@
     }
   }
 
-  &:hover{
+  &:hover {
     background: var(--tertiary-color);
     border: 1px solid var(--secondary-color-dark-2);
   }
 
-  span{
+  span {
     font-weight: bold;
     font-size: var(--32px);
   }
@@ -50,7 +50,7 @@
     gap: 10px;
     font-size: var(--16px);
 
-    span{
+    span {
       font-weight: bold;
       font-size: var(--20px);
     }
@@ -65,4 +65,14 @@
 .timeContainer.active {
   color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
+}
+
+.countdownText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
+  font-size: 1rem;
+  color: var(--white);
 }
