--- a/src/components/full-width-slider/FullWidthSlider.module.scss
+++ b/src/components/full-width-slider/FullWidthSlider.module.scss
@@ -48,12 +48,12 @@
   }
 }
 
-.imageContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .overlay {
@@ -111,14 +111,25 @@
   align-items: center;
   justify-items: center;
   align-content: center;
-  margin: 0 auto ;
+  margin: 0 auto;
   width: 130px;
+}
+
+.imageItem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
 }
 
 .sliderImage {
   object-fit: contain;
   cursor: pointer;
   height: auto;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
   border: 1px solid transparent;
   transition: transform 0.2s ease-in-out;
 
