--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -61,7 +61,7 @@
   margin: 0 auto;
 }
 
-.userAvatar{
+.userAvatar {
   border-radius: 155px;
   object-fit: cover;
 }
@@ -133,11 +133,23 @@
   }
 }
 
+.formikInput {
+  background: none;
+  outline: none;
+  border: none;
+  width: 100%;
+  color: var(--white);
+}
+
 .input {
   display: flex;
   padding: 15px 30px;
   border-radius: 55px;
-  gap: 20px;
+  gap: 10px;
+  justify-content: space-between;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
   border: 1px solid var(--secondary-color-dark);
   background: var(--secondary-color-dark-2);
   transition: all 0.3s ease-in-out;
