--- a/src/sections/leaders/Leaders.module.scss
+++ b/src/sections/leaders/Leaders.module.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  padding: 0 0 30px 0;
 
   &::-webkit-scrollbar {
     width: 12px;
