--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -174,6 +174,31 @@
   }
 }
 
+.outlinedSmall{
+  display: flex;
+  gap: 10px;
+  background-color: var(--quaternary-color);
+  color: var(--white);
+  width: 100%;
+  font-size: var(--16px);
+  border: 1px solid var(--secondary-color);
+  border-radius: 55px;
+  padding: 10px 30px;
+  font-weight: 600;
+
+  &:hover {
+    background-color: var(--tertiary-color);
+  }
+
+  @media screen and (max-width: 1180px) {
+    &.outlined {
+      padding: 7px 30px;
+      height: 100%;
+      font-size: var(--14px);
+    }
+  }
+}
+
 .optionButtons {
   width: 40%;
   display: flex;
