--- a/src/components/account/Account.module.scss
+++ b/src/components/account/Account.module.scss
@@ -180,9 +180,11 @@
   background-color: var(--quaternary-color);
   color: var(--white);
   width: 100%;
-  font-size: var(--16px);
   border: 1px solid var(--secondary-color);
   border-radius: 55px;
+  align-content: center;
+  justify-content: center;
+  font-size: 14px;
   padding: 10px 30px;
   font-weight: 600;
 
